@@ -1,5 +1,5 @@
 /*
-    Copyright 2011, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2011-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -16,6 +16,11 @@ const setting< string > c_smtp_host(
     "fost-internet/Cpp/fost-inet-tests/smtp.cpp",
     "fost-internet tests", "SMTP server",
     "localhost", true);
+
+const setting< port_number > c_smtp_port(
+    "fost-internet/Cpp/fost-inet-tests/smtp.cpp",
+    "fost-internet tests", "SMTP port",
+    25, true);
 
 const setting< string > c_pop3_server(
     "fost-inet/Cpp/fost-inet-test/pop3.cpp",
