@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2011, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -11,6 +11,7 @@
 
 
 extern const fostlib::setting< fostlib::string > c_smtp_host;
+extern const fostlib::setting< fostlib::port_number > c_smtp_port;
 extern const fostlib::setting< fostlib::string > c_pop3_server;
 extern const fostlib::setting< fostlib::string > c_pop3_test_account;
 
