@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2011, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2009-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -38,25 +38,22 @@ FSL_TEST_FUNCTION( download_messages ) {
 
 FSL_TEST_FUNCTION( sending_tests ) {
     host host(c_smtp_host.value());
+    port_number port(c_smtp_port.value());
 
-    smtp_client server( host );
+    smtp_client server(host, port);
 
     text_body mail(
-        L"This message shows that messages can be sent from appservices.felspar.com"
-    );
+        L"This message shows that messages can be sent from appservices.felspar.com");
     mail.headers().set(L"Subject", L"Test email -- send directly via SMTP");
     FSL_CHECK_NOTHROW(
-        server.send(mail, "pop3test@felspar.com", "appservices@felspar.com")
-    );
+        server.send(mail,
+            "pop3test@felspar.com", "appservices@felspar.com"));
 
     text_body should_be_bounced(
         L"This should be a bounced message. It shows that bounce messages "
-        L"are being received."
-    );
+        L"are being received.");
     mail.headers().set(L"Subject", L"Test email -- sent to invalid address");
     FSL_CHECK_NOTHROW(
         server.send(
-            should_be_bounced, "not-valid@felspar.com", "pop3test@felspar.com"
-        )
-    );
+            should_be_bounced, "not-valid@felspar.com", "pop3test@felspar.com"));
 }
