@@ -1,5 +1,5 @@
 /*
-    Copyright 1999-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 1999-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -94,7 +94,7 @@ namespace fostlib {
         implementation *m_impl;
         public:
             /// Create a client which connects to the specified server
-            smtp_client( const host &server );
+            smtp_client( const host &server, const port_number = 25 );
             ~smtp_client();
 
             /// Send an email to the specified recipient from the specified sender
